Update `Select` docstring (#7464)
**Context:**
The `Select` operation has many names and symbols in the literature.

**Description of the Change:**

Changes to `Select` docstring:
1. Update the circuit drawing in the docstring (see below for
convenience) to introduce box-control and mixed-circle-control nodes.
2. Add a brief mention of different names for `Select` operation in the
literature: "Multiplexer", "multiplexed operation"
3. Add a mention of additional name if target operations are all
single-qubit Pauli rotations about the same axis ("uniformly controlled
rotation")
4. Add seealso link to `SelectPauliRot`, which is a uniformly controlled
rotation.

Changes to `SelectPauliRot` docstring:
1. Make the naming priority conform with that of `Select` docstring:
"Select" is the generic name (as given by the class name),
"multiplexer/multiplexing" and "uniformly controlled rotation" are
secondary, alternative names.
2. Mention rotation axis in equation and text. Mention that it is the
same axis for all Select-applied rotations.
3. Add image like the one for `Select`.

Old image for `Select`:

![image](https://github.com/user-attachments/assets/268b9026-c264-4aa6-81c1-562146cccf41)

New image for `Select`:

![image](https://github.com/user-attachments/assets/ddd7a409-b8ef-4216-9d82-61e79a395219)

Added image for `SelectPauliRot`:

![image](https://github.com/user-attachments/assets/759eb709-b977-48d6-9173-2903c6f33bdf)


**Benefits:**
Better coverage of naming and drawing conventions in literature.
More homogeneous docs between `Select` and `SelectPauliRot`.

**Possible Drawbacks:**
N/A

**Related GitHub Issues:**
[sc-91687]

---------

Co-authored-by: Diego <67476785+DSGuala@users.noreply.github.com>

--- a/doc/_static/templates/subroutines/select_pauli_rot.tex
+++ b/doc/_static/templates/subroutines/select_pauli_rot.tex
@@ -21,6 +21,6 @@
     & |[operator,inner sep=3pt]| & \midstick[4,brackets=none]{=} & |[selectctrl]| & \midstick[4,brackets=none]{=} & \octrl{1} & \octrl{1} & \octrl{1} & \ \ldots \ & \ctrl{1} & \\
     & |[operator,inner sep=3pt]| & & |[selectctrl]| & & \octrl{1} & \octrl{1} & \ctrl{1} & \ \ldots \ & \ctrl{1} & \\
     & |[operator,inner sep=3pt]| & & |[selectctrl]| & & \octrl{1} & \ctrl{1} & \octrl{1} & \ \ldots \ & \ctrl{1} & \\
-    & \gate{U_i}\wire[u][3]{q} & & \gate{U_i}\wire[u][3]{q} & & \gate{U_0} & \gate{U_1} & \gate{U_2} & \ \ldots \ & \gate{U_7} &
+    & \gate{R_P}\wire[u][3]{q} & & \gate{R_P}\wire[u][3]{q} & & \gate{R_P(\alpha_0)} & \gate{R_P(\alpha_1)} & \gate{R_P(\alpha_2)} & \ \ldots \ & \gate{R_P(\alpha_7)} &
 \end{quantikz}
 \end{document}
